# surealived

./: AUTHORS  CMakeLists.txt  README.md
common/: logging.c  logging.h  sdversion.h
doc/: 01_intro.doc  02_installation.doc  03_deploy.doc  04_configuration.doc  README.txt  makelatex.pl  module_flow.eps  module_writing_EN.tex  preamble.tex  run.sh  sd-diagram.eps  surealived-logo.eps  surealived_modules.tex  writing_modules_PL.tex
examples/: onet-exec.xml  onet-notify-real.xml  onet-notify.xml  onetdns-ops.xml  onetdns.xml  onetdnsmicro.xml  onetwp-notest.xml  onetwp.xml  onetwp2.xml  onetwpssl.xml  rtsp.xml  sunsite-lua.xml
ipvssync/: CMakeLists.txt  common.h  config.c  config.h  diffs.c  diffs.h  ipvsfuncs.c  ipvsfuncs.h  ipvssync.c  maincfg.c  maincfg.h
libipvs/: CMakeLists.txt  libipvs.c  libipvs.h
scripts/etc/default/: surealived
scripts/etc/init.d/: surealived-check  surealived-ipvssync
scripts/etc/logrotate.d/: surealived
scripts/etc/surealived/: surealived.cfg
surealived/: CMakeLists.txt  Doxyfile  Makefile  common.c  common.h  install_manifest.txt  modloader.c  modloader.h  sd_cmd.c  sd_cmd.h  sd_defs.h  sd_epoll.c  sd_epoll.h  sd_ipvssync.c  sd_ipvssync.h  sd_log.c  sd_log.h  sd_maincfg.c  sd_maincfg.h  sd_notify.c  sd_notify.h  sd_offline.c  sd_offline.h  sd_override.c  sd_override.h  sd_socket.c  sd_socket.h  sd_stats.c  sd_stats.h  sd_tester.c  sd_tester.h  surealived.c  surealived.cfg  xmlparser.c  xmlparser.h
surealived/modules/: CMakeLists.txt  Makefile  mod_dns.c  mod_exec.c  mod_http.c  mod_lua.c  mod_tcp.c
surealived/scripts/: rtsp.lua  sunsite.lua  test_down.sh  test_real_down.sh  test_real_up.sh  test_up.sh  testexec.pl
