cmake_minimum_required(VERSION 2.6)
IF (CMAKE_SYSTEM_PROCESSOR MATCHES "i.86")
    SET (PROCTYPE "x86")
ELSE (CMAKE_SYSTEM_PROCESSOR MATCHES "i.86")
    IF (CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
        SET (PROCTYPE "x86")
    ELSE (CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
        SET (PROCTYPE "${CMAKE_SYSTEM_PROCESSOR}")
    ENDIF (CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
ENDIF (CMAKE_SYSTEM_PROCESSOR MATCHES "i.86")

include_directories("/lib/modules/${CMAKE_SYSTEM_VERSION}/build/include")
include_directories("/lib/modules/${CMAKE_SYSTEM_VERSION}/build/include/net")
include_directories("/lib/modules/${CMAKE_SYSTEM_VERSION}/build/arch/${PROCTYPE}/include")
add_library(libipvs libipvs)
